--- a/TOC-html.html
+++ b/TOC-html.html
@@ -273,21 +273,43 @@
 
   <script>
     (function(){
-      // Post the document height to parent frames so embeds can resize
-      function sendHeight() {
-        try{
-          const height = document.documentElement.scrollHeight;
-          window.parent.postMessage({ type: 'timeline-height', height }, '*');
-        }catch(e){/* ignore cross-origin or missing parent */}
+      // Measure the visible content container (`.toc`) to avoid viewport-driven feedback loops.
+      const containerSelector = '.toc';
+      const MIN_HEIGHT = 80;
+      let lastSent = 0;
+
+      function measureHeight(){
+        const el = document.querySelector(containerSelector) || document.body;
+        const rect = el.getBoundingClientRect();
+        // rect.top is relative to viewport; use scrollTop to compute distance from document top
+        const scrollTop = window.scrollY || document.documentElement.scrollTop || 0;
+        const height = Math.ceil(scrollTop + rect.top + rect.height + 16); // add small bottom margin
+        return Math.max(height, MIN_HEIGHT);
       }
-      // initial and on resize
-      window.addEventListener('load', sendHeight);
-      window.addEventListener('resize', sendHeight);
-      // when details toggle
-      document.addEventListener('toggle', sendHeight, true);
-      // observe DOM changes that affect layout
-      const ro = new MutationObserver(()=>{ setTimeout(sendHeight, 80); });
-      ro.observe(document.body, { childList:true, subtree:true, attributes:true });
+
+      function postHeightIfChanged(h){
+        if (Math.abs(h - lastSent) < 6) return; // ignore tiny fluctuations
+        lastSent = h;
+        try{ window.parent.postMessage({ type: 'timeline-height', height: h }, '*'); }
+        catch(e){ /* ignore cross-origin */ }
+      }
+
+      function sendBurst(){
+        [0,120,360,800].forEach(ms => setTimeout(()=> postHeightIfChanged(measureHeight()), ms));
+      }
+
+      let _deb;
+      function debounced(){ clearTimeout(_deb); _deb = setTimeout(sendBurst, 80); }
+
+      window.addEventListener('load', sendBurst);
+      window.addEventListener('resize', debounced);
+      document.addEventListener('toggle', debounced, true);
+      document.addEventListener('transitionend', debounced, true);
+
+      const mo = new MutationObserver(debounced);
+      mo.observe(document.body, { childList:true, subtree:true, attributes:true, characterData:true });
+
+      window.__sendTimelineHeight = sendBurst;
     })();
   </script>
 
